Set the header to be sticky. Fixed visible break on background image.

--- a/Styles.css
+++ b/Styles.css
@@ -4,7 +4,7 @@ body {
     background-size: 100%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0px;
-    height: 100%;
+    height: 2400000px;
 }
 
 h1, h3, h6 {
@@ -30,8 +30,12 @@ h2, h4, h6, p {
     text-align: center;
     font-size: 20pt;
     color: white;
-    padding: 1%
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background-color: #0066dd;
 }
+
 
 .title {
     text-align: center;
@@ -66,7 +70,6 @@ h2, h4, h6, p {
     text-align: right;
     display: inline-block;
 }
-
 
 a:link {
     color: white;
